# SensorWrangler

./: .bazelrc  .gitignore  BUILD  BUILD.bak  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bak  extensions.bzl  flake.nix  j-antplus.BUILD  wrangler.settings
.github/workflows/: build.yml
data/: config.txt
data/Measurement-1/: AntHeartRateSensor65.txt
res/: stylesheet.css
src/main/resources/: stylesheet.css
src/main/resources/cli/: logback.xml
src/main/resources/gui/: logback.xml
src/me/danielschaefer/sensorwrangler/: BUILD.bazel  Cli.kt  KotlinMain.kt  Library.kt  Main.java  Main.kt  Measurement.kt  NamedThreadFactory.kt  Preference.kt  SensorWrangler.kt  Settings.kt  StringUtil.kt
src/me/danielschaefer/sensorwrangler/annotations/: BUILD.bazel  ConnectionProperty.kt  SensorProperty.kt
src/me/danielschaefer/sensorwrangler/base/: App.kt  BUILD.bazel  MeasurementDeserializer.kt  SensorWrangler.kt  Settings.kt
src/me/danielschaefer/sensorwrangler/data/: BUILD.bazel  Chart.kt  DataPoint.kt  Measurement.kt  Picker.kt  Preference.kt  Recorder.kt  VirtualSensor.kt
src/me/danielschaefer/sensorwrangler/gui/: AngleGraph.kt  AxisGraph.kt  BUILD.bazel  BarDistributionGraph.kt  BarGraph.kt  Chart.kt  DistributionGraph.kt  Graph.kt  LineGraph.kt  PieDistributionGraph.kt  ScatterGraph.kt  TableGraph.kt
src/me/danielschaefer/sensorwrangler/javafx/: Alert.kt  App.kt  BUILD.bazel  ChartTab.kt  GuiApp.kt  JavaFXUtil.kt  JavaFxSettings.kt  ListElement.java  MainWindow.kt  MappedList.java  OpaqueStackPane.kt  PreferencesTab.kt  SensorTab.kt  Settings.kt  SettingsWindow.kt  TableRow.java  WranglerMenu.kt
src/me/danielschaefer/sensorwrangler/javafx/popups/: AboutPopup.kt  AddAveragePopup.kt  AddChartPopup.kt  AddSensorPopup.kt  Alert.kt  StartRecordingPopup.kt
src/me/danielschaefer/sensorwrangler/javafx/popups/test/: DataPointsExporter.kt
src/me/danielschaefer/sensorwrangler/recording/: BUILD.bazel  CsvRecorder.kt  DatabaseRecorder.kt  Recorder.kt  SocketRecorder.kt
src/me/danielschaefer/sensorwrangler/sensors/: AntCadenceSensor.kt  AntHeartRateSensor.kt  AntPlusSensor.kt  AntPowerSensor.kt  AntScanResult.kt  AntSpeedCadenceSensor.kt  AntSpeedSensor.kt  AntStationaryBike.kt  AntUtil.kt  Averager.kt  BUILD.bazel  ConnectionChangeAdapter.kt  ConnectionChangeListener.java  ConnectionChangeListener.kt  FileSensor.kt  RandomSensor.kt  RandomWalkSensor.kt  ScanResult.kt  Scannable.kt  Sensor.kt  SocketSensor.kt  VirtualSensor.kt
src/me/danielschaefer/sensorwrangler/util/: BUILD.bazel  NamedThreadFactory.kt  StringUtil.kt
src/resources/: logback.xml
tools/: heartrate.py  socket-sensor.py
