module(
    name = "sensorwrangler",
    version = "0.0.1",
)

bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_kotlin", version = "2.3.0")
bazel_dep(name = "rules_jvm_external", version = "6.10")
bazel_dep(name = "platforms", version = "1.0.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    known_contributing_modules = ["protobuf"],
    artifacts = [
        # For saving the configuration
        "com.fasterxml.jackson.core:jackson-databind:2.10.1",
        # *Tail*ing a file
        "commons-io:commons-io:2.6",
        # Recording to databases - using official maven coordinates
        "org.jetbrains.exposed:exposed-core:0.37.3",
        "org.jetbrains.exposed:exposed-jdbc:0.37.3",
        "joda-time:joda-time:2.5",
        "org.postgresql:postgresql:42.2.5",

        # Logging (also run-time dependency of some other dependencies)
        "org.slf4j:slf4j-api:1.7.11",
        "io.github.microutils:kotlin-logging-jvm:2.1.14",

        "org.jetbrains.kotlin:kotlin-reflect:1.5.0",

        "org.openjfx:javafx-base:21.0.2",
        "org.openjfx:javafx-base:21.0.2:win",
        "org.openjfx:javafx-base:21.0.2:linux",
        "org.openjfx:javafx-base:21.0.2:mac",

        "org.openjfx:javafx-controls:21.0.2",
        "org.openjfx:javafx-controls:21.0.2:win",
        "org.openjfx:javafx-controls:21.0.2:linux",
        "org.openjfx:javafx-controls:21.0.2:mac",

        "org.openjfx:javafx-graphics:21.0.2",
        "org.openjfx:javafx-graphics:21.0.2:win",
        "org.openjfx:javafx-graphics:21.0.2:linux",
        "org.openjfx:javafx-graphics:21.0.2:mac",

        # j-antplus dependencies
        "javax.usb:usb-api:1.0.2",
        "io.projectreactor:reactor-core:3.3.4.RELEASE",
        "org.reactivestreams:reactive-streams:1.0.3",
        "org.usb4java:usb4java:1.3.0",
        "org.usb4java:usb4java-javax:1.3.0",
        "ch.qos.logback:logback-core:1.2.3",
        "ch.qos.logback:logback-classic:1.2.3",
        "org.apache.commons:commons-lang3:3.8.1",
        "junit:junit:4.13",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

# j-antplus as a git repository
bazel_dep(name = "bazel_skylib", version = "1.8.1")

non_module_deps = use_extension("//:extensions.bzl", "non_module_deps")
use_repo(non_module_deps, "j_antplus")
