load("@rules_java//java:defs.bzl", "java_binary")
load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@io_bazel_rules_kotlin//kotlin:lint.bzl", "ktlint_fix", "ktlint_test")

kt_jvm_library(
    name = "app_lib",
    srcs = glob(["**/*.kt"]) + glob(["**/*.java"]),
    deps = [
        "//:java_deps",
        "@j_antplus//:j_antplus",
    ],
    visibility = ["//visibility:public"],
)

kt_jvm_library(
    name = "cli_lib",
    srcs = [ "Cli.kt" ],
    visibility = ["//visibility:public"],
)

ktlint_test(
    name = "lint_test",
    srcs = glob(["**/*.kt"]),
)

ktlint_fix(
    name = "lint_fix",
    srcs = glob(["**/*.kt"]),
)
