load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "recording",
    srcs = glob([ "*.kt" ]),
    deps = [
        "//:lib_deps",
        "//src/me/danielschaefer/sensorwrangler/data",

        # Database
        "@maven//:org_jetbrains_exposed_exposed_core",
        "@maven//:org_jetbrains_exposed_exposed_jdbc",
        "@maven//:org_postgresql_postgresql",
    ],
    visibility = [
        "//src/me/danielschaefer/sensorwrangler:__pkg__",
        "//src/me/danielschaefer/sensorwrangler/base:__pkg__",
    ],
)
